--- a/Demo/ETCF.csproj
+++ b/Demo/ETCF.csproj
@@ -50,6 +50,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\LayeredSkin.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=5.2.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -67,9 +71,16 @@
     <Compile Include="CameraInterface\ipcsdk.cs" />
     <Compile Include="CameraInterface\IPNCCamera.cs" />
     <Compile Include="CameraInterface\IPNCSDK.cs" />
+    <Compile Include="ComperLogic\GridDouclickShowPicDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ComperLogic\GridDouclickShowPicDialog.designer.cs">
+      <DependentUpon>GridDouclickShowPicDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="ComperLogic\StopType.cs" />
     <Compile Include="DataCoding\DataHander.cs" />
     <Compile Include="DataCoding\HanderJGData.cs" />
+    <Compile Include="DataCoding\HanderJGDataToQueue.cs" />
     <Compile Include="DataCoding\HanderRSUDataToQueue.cs" />
     <Compile Include="DelegateState.cs" />
     <Compile Include="ExcelCreate.cs" />
@@ -86,6 +97,12 @@
     <Compile Include="CameraInterface\HKCamera.cs" />
     <Compile Include="CameraInterface\IdentifierInfo.cs" />
     <Compile Include="Levenshtein.cs" />
+    <Compile Include="Login\frmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login\frmLogin.designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="myButtonCheck.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -96,11 +113,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueData.cs" />
     <Compile Include="SocketHelper.cs" />
+    <Compile Include="SQLDB\MySqlInter.cs" />
     <Compile Include="SQLDB\SQLServerInter.cs" />
     <Compile Include="StartProtect.cs" />
     <Compile Include="StateObject.cs" />
+    <Compile Include="VehType.cs" />
+    <EmbeddedResource Include="ComperLogic\GridDouclickShowPicDialog.resx">
+      <DependentUpon>GridDouclickShowPicDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormDemo.resx">
       <DependentUpon>FormDemo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login\frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="myButtonCheck.resx">
       <DependentUpon>myButtonCheck.cs</DependentUpon>
@@ -149,6 +174,7 @@
     <Content Include="Signal\green.ico" />
     <Content Include="Signal\red.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
